crates/compiler/parse/tests/snapshots/pass/when_in_parens.expr.formatted.roc
when x is
    Ok ->
        3