crates/compiler/parse/tests/snapshots/fail/if_guard_without_condition.expr.roc
when Just 4 is
    Just if ->
        4

    _ ->
        2
